--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,8 @@ name: gh-pages-deploy
 on:
   push:
     branches: [ main ]
+  schedule:
+    - cron:  '22 3 * * 5' # Friday 12:22 (JST)
 
 jobs:
   build:
